<resources>
    <string name="app_name">Průvodce institucemi</string>
    <string name="title_scanner_fragment">Čtečka</string>
    <string name="title_profile_fragment">Profil</string>
    <string name="title_more_fragment">Více</string>
    <string name="title_institutions_fragment">Instituce</string>
    <string name="username">Uživatelské jméno</string>
    <string name="password">Heslo</string>
    <string name="register">Registrace</string>
    <string name="sign_in">Přihlásit se</string>
    <string name="login_failed">Přihlášení se nezdařilo</string>
    <string name="login_banner">Přihlašení</string>
    <string name="building">Budova</string>
    <string name="list_of_institutions">Seznam institucí</string>
    <string name="about_us">O nás</string>
    <string name="email">E-mail</string>
    <string name="logout">Odhlásit se</string>
    <string name="language_settings">Nastavení jazyka</string>
    <string name="password_again">Heslo znovu</string>
    <string name="send_exhibit">Pošli exponát</string>
    <string name="become_translator">Stát se překladatelem</string>
    <string name="name_of_exhibit">Jméno exponátu</string>
    <string name="exhibit_info_label">Text o exponátu (nepovinné)</string>
    <string name="image_with_exhibit_info_label">Obrázek s textem k exponátu</string>
    <string name="building_name_or_number">Jméno/číslo budovy</string>
    <string name="room_number">Jméno/číslo místnosti</string>
    <string name="showcase_name_or_number">Jméno/číslo vitrýny</string>
    <string name="requiredNameOfExhibit">Jméno exponátu musí být vyplněno</string>
    <string name="requiredNameOfBuilding">Jméno budovy musí být vyplněno</string>
    <string name="requiredNameOfRoom">Jméno místnosti musí být vyplněno</string>
    <string name="requiredNameOfShowCase">Jméno vitríny musí být vyplněno</string>
    <string name="requiredUsername">Uživatelské jméno musí být vyplněno</string>
    <string name="tooLong">Moc dlouhé</string>
    <string name="tooShort">Moc krátké</string>
    <string name="strongerPassword">Heslo musí obsahovat malé a velké písmeno a číslici</string>
    <string name="requiredEmail">Email musí být vyplněný</string>
    <string name="notMatchesEmail">Nevalidní emailová adresa</string>
    <string name="requiredPassword">Heslo musí být vyplněno</string>
    <string name="passwordDoesntMatch">Hesla se neshodují</string>
    <string name="change_password">Změnit heslo</string>
    <string name="change_profile_picture">Změnit profilový obrázek</string>
    <string name="logout_icon">Ikona odhlášení</string>
    <string name="favourite_institutions">Oblíbené instituce</string>
    <string name="password_icon">Ikona změny hesla</string>
    <string name="profile_line">Čára pod uživatelem</string>
    <string name="profile_icon">Ikona změny profilového obrázku</string>
    <string name="favourite_institutions_icon">Ikona oblíbených institucí</string>
    <string name="language_settings_icon">Ikona nastavení jazyka</string>
    <string name="choose_your_language">Zadejte váš jazyk</string>
    <string name="institution_name">Název instituce</string>
    <string name="requiredNameOfInstitutionFromList">Vyberte název instituce ze seznamu</string>
    <string name="choose_image">Vyberte foto</string>
    <string name="image_with_exhibit_non_required">Obrázek s exponátem (nepovinné)</string>
    <string name="requiredInfoLabelImage">Vyberte obrázek s textem</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_pick_exhibit_fragment">Výběr</string>
    <string name="choose_institution">Vyberte instituci</string>
    <string name="pick_exhibit_text">Výběr exponátu</string>
    <string name="search_translation">Vyhledat překlad</string>
    <string name="address">Adresa</string>
    <string name="registration_successfull">Registrace se zdařila</string>
    <string name="send_exhibit_success">Uložení exponátu se zdařilo</string>
    <string name="registration_failed">Registrace se nezdařila</string>
    <string name="change_successfull">Změna byla úspěšná</string>
    <string name="change_password_successfull">Změna hesla byla úspěšná</string>
    <string name="change_password_failed">Změna hesla se nezdařila</string>
    <string name="password_old">Aktuální heslo</string>
    <string name="requiredNameOfBuildingFromList">Vyberte název budovy ze seznamu</string>
    <string name="requiredNameOfRoomFromList">Vyberte název místnosti ze seznamu</string>
    <string name="requiredNameOfShowcaseFromList">Vyberte název vitríny ze seznamu</string>
    <string name="requiredNameOfExhibitFromList">Vyberte název exponátu ze seznamu</string>
    <string name="translated_text">Přeložený text</string>
    <string name="no_translation">Neexistuje překlad ve vašem jazyce ani v angličtině</string>
    <string name="upload_failed">Nepodařilo se nahrát exponát</string>
    <string name="upload_successfull">Nahrání se zdařilo</string>
    <string name="camera">Fotoaparát</string>
    <string name="gallery">Galerie</string>
    <string name="title_registration_fragment">Registrace</string>

    <string name="about_us_textView">\n
                Cílem této bakalářské práce je návrh pro vývoj mobilní aplikace,
                která by měla umožnit návštěvníkům muzeí elektronickou interpretaci informací o exponátech v jich zvoleném jazyce.
                Práce se zabývá vývojem a fungováním návrhu této aplikace,
                určena je pro mobilní telefony s operačním systémem Android.</string>
    <string name="about_us_becomeTranslator">\n
                Aby jste mohli překládat texty pro ostatní uživatele, musíte se nejdříve zaregistrovat.
                K registraci můžete využít formulář na stránce profil, nebo jděte na stránky http://147.228.67.66/.
                Pokud již účet máte, na stránkách http://147.228.67.66/ se přihlašte, v navigaci najdete možnost Překládat.</string>
    <string name="wrong_code">QR kód obsahuje nevalidní hodnoty</string>
</resources>