<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_scanner"
        android:icon="@drawable/ic_baseline_qr_code_scanner_24"
        android:title="@string/title_scanner_fragment" />

    <item
        android:id="@+id/navigation_pickExhibit"
        android:icon="@drawable/ic_magnifying_glass"
        android:title="@string/title_pick_exhibit_fragment" />

    <item
        android:id="@+id/navigation_institutions"
        android:icon="@drawable/ic_baseline_location_city_24"
        android:title="@string/title_institutions_fragment" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_baseline_account_circle_24"
        android:title="@string/title_profile_fragment" />

    <item
        android:id="@+id/navigation_more"
        android:icon="@drawable/ic_baseline_more_horiz_24"
        android:title="@string/title_more_fragment" />

</menu>