<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="?attr/actionBarSize"
    tools:context=".ui.profile.LoggedUserFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="15dp">

        <com.mikhaellopez.circularimageview.CircularImageView
            android:id="@+id/imageview_profile"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:src="@drawable/profile_face" />

        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/imageview_profile"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/username"
            android:textColor="#000"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/username"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:text="@string/email" />

        <ImageView
            android:id="@+id/image_line"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_below="@id/email"
            android:contentDescription="@string/profile_line"
            android:src="@drawable/profile_line" />

        <LinearLayout
            android:id="@+id/change_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/image_line"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginStart="70dp"
                android:contentDescription="@string/password_icon"
                android:src="@drawable/ic_baseline_lock_24" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:text="@string/change_password"
                android:textColor="#000"
                android:textSize="18sp" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/change_profil_picture"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/change_password"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginStart="70dp"
                android:contentDescription="@string/profile_icon"
                android:src="@drawable/ic_baseline_person_24" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:text="@string/change_profile_picture"
                android:textColor="#000"
                android:textSize="18sp" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/favourite_institutions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/change_profil_picture"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginStart="70dp"
                android:contentDescription="@string/favourite_institutions_icon"
                android:src="@drawable/ic_baseline_favorite_24" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:text="@string/favourite_institutions"
                android:textColor="#000"
                android:textSize="18sp" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/language_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/favourite_institutions"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginStart="70dp"
                android:contentDescription="@string/language_settings_icon"
                android:src="@drawable/ic_baseline_language_24" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:text="@string/language_settings"
                android:textColor="#000"
                android:textSize="18sp" />


        </LinearLayout>


        <LinearLayout
            android:id="@+id/logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/language_settings"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:gravity="center"

            android:orientation="horizontal">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@string/logout_icon"
                android:src="@drawable/logout" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/logout"
                android:textColor="#000"
                android:textSize="18sp" />

        </LinearLayout>


    </RelativeLayout>
</ScrollView>